Update forms: - Add delete field to forms - Fix styles to prevent overflow - Implement 'Other' option in multiple choice field - Integrate markdown feature in form description - Set default overscroll behavior - Optimize code - Make necessary changes

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,6 +21,10 @@ input:focus {
   }
 }
 
+focus:focus{
+  opacity: 1!important;
+}
+
 body {
   transition: all 2s ease-in-out !important;
   background-color: black;
